k8s/cloudsql/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"    
    certmanager.k8s.io/issuer: "letsencrypt-staging"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
 rules:
 - host: ssl-testing.work
   http:
     paths:
     - path: /*
       backend:
         serviceName: webserver-service
         servicePort: 80
